# ARC

./: .gitignore  CMakeLists.txt  README.md  Redistribution.txt  Redistributions.txt
src/: ARC.ixx  CMakeFunctions.cmake  ConsoleOutputColours.cpp  ConsoleOutputColours.h  ConsoleOutputColours.ixx  DataAndTime.h  DateAndTime.cpp  DateAndTime.h  DebugMacros.h  DynamicLibrary.cpp  DynamicLibrary.h  DynamicLibrary.ixx  EnumClassBitwiseOperators.ixx  ExportAttributes.h  FileLoader.cpp  FileLoader.h  FileLoader.ixx  FileSaver.cpp  FileSaver.h  FileSaver.ixx  FileSystemHelpers.h  Helpers.h  Helpers.ixx  Log.cpp  Log.h  Log.ixx  ScopeAndRef.h  ScopeAndRef.ixx  StringConversion.cpp  StringConversion.h  StringConversion.ixx  VisualStudioDebugOutput.cpp  VisualStudioDebugOutput.h  WindowsErrorHandling.cpp  WindowsErrorHandling.h  WindowsErrorHandling.ixx  WindowsInclude.h  WindowsVersionMacro.h
